lib/type/static/testdata/errors/wrong_arg.lua
-- Passing a string where a number is required.
local x = math.sqrt("hello")
