lib/type/static/testdata/errors/wrong_arg.expected
test.lua:2: error: argument 1: cannot pass '"hello"' where 'number' expected
  2 | local x = math.sqrt("hello")
